<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgmain"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:isScrollContainer="false"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bgmain"
            android:orientation="vertical"
            android:weightSum="1">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.03" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="0.05"
                android:text="@string/creategoal"
                android:textColor="@color/black"
                android:textSize="@dimen/margin_18" />

            <TextView
                android:id="@+id/current_month"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="0.06"
                android:textColor="@color/off_black"
                android:textSize="@dimen/margin_15" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/margin_15"
                android:layout_marginStart="@dimen/margin_15"
                android:layout_weight="0.74"
                android:background="@drawable/glass_color"
                android:orientation="vertical"
                android:padding="@dimen/margin_8">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/goalname"
                        android:textColor="@color/black"
                        android:textSize="@dimen/margin_15" />

                    <EditText
                        android:id="@+id/goal_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_8"
                        android:layout_marginStart="@dimen/margin_8"
                        android:background="@android:color/transparent"
                        android:hint="@string/entergoal"
                        android:textColor="@color/black"
                        android:textColorHint="@color/off_black"
                        android:textSize="@dimen/margin_13" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/target"
                        android:textColor="@color/black"
                        android:textSize="@dimen/margin_15" />

                    <EditText
                        android:id="@+id/target_days"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_8"
                        android:layout_marginStart="@dimen/margin_8"
                        android:background="@android:color/transparent"
                        android:hint="@string/entertarget"
                        android:textColor="@color/black"
                        android:textColorHint="@color/off_black"
                        android:textSize="@dimen/margin_13" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:text="@string/selectnonworking"
                    android:textColor="@color/black"
                    android:textSize="@dimen/margin_15" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/list_days"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_weight="1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.038" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.003"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.08"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.498"
                    android:background="@color/black"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/margin_15" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.004"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/create"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.498"
                    android:background="@color/green"
                    android:gravity="center"
                    android:text="@string/create"
                    android:textColor="@color/white"
                    android:textSize="@dimen/margin_15" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>