<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgmain"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/margin_30"
        android:layout_marginStart="@dimen/margin_30"
        android:orientation="vertical"
        android:weightSum="1.0">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.04" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08"
            android:gravity="center"
            android:text="@string/goal"
            android:textColor="@color/black"
            android:textSize="@dimen/margin_25" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.11" />

        <Button
            android:id="@+id/crate_goal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/margin_30"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_weight="0.07"
            android:background="@color/grrencard"
            android:text="@string/creategoal"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/margin_15" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.02" />

        <Button
            android:id="@+id/view_goal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/margin_30"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_weight="0.07"
            android:background="@color/orangecard"
            android:text="@string/currentmonth"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/margin_15" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.02" />

        <Button
            android:id="@+id/view_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/margin_30"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_weight="0.07"
            android:background="@color/cardblue"
            android:text="@string/goalhistory"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/margin_15" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.38"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/margin_180"
                android:layout_height="@dimen/margin_180"
                android:alpha="0.4"
                android:background="@drawable/goal" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.12" />
    </LinearLayout>
</LinearLayout>
